# ros2-projects

./: README.md
line-follower/: CMakeLists.txt  package.xml
line-follower/include/line_follower/: image_processed.hpp
line-follower/launch/: line_follower.launch.py
line-follower/src/: image_processed.cpp
